--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,15 @@
 pipeline {
   agent any
   stages {
-    stage('Version') {
+    stage('version') {
       steps {
         sh 'python3 --version'
       }
     }
-    stage('test') {
+    stage('hello') {
       steps {
-        sh 'python3 test.py'
+        sh 'python3 hello.py'
       }
-   }    
+    }
   }
 }
